--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,9 +10,7 @@
   <meta http-equiv="Permissions-Policy" content="interest-cohort=()"/>
   <meta name="referrer" content="no-referrer">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="{{ 'assets/css/style.css' }}" id="dark">
-    <link rel="stylesheet" href="{{ 'assets/css/light_style.css' }}" media="none" id="light">
-    <link rel="shortcut icon" type="image/x-icon" href="media/favicon.ico">
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 
 {% seo %}
     <meta name="viewport" content="width=device-width, initial-scale=1">
